add compile switch for debug and bench mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,25 +4,28 @@ cmake_minimum_required(VERSION 2.6)
 find_package(GTest REQUIRED)
 find_package(Threads)
 
-set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Wall -std=c++11")
+set(CMAKE_CXX_FLAGS_DEBUG "-DDEBUG -g -O0 -Wall -std=c++11")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2 -Wall -std=c++11")
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
-set(BENCHMARK_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/bench)
 
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/test TEST_SRCS)
-foreach(i ${TEST_SRCS})
-  get_filename_component(name ${i} NAME_WE)
-  set(name "${name}_unittest")
-  add_executable(${name} ${i})
-  target_link_libraries(${name} ${GTEST_BOTH_LIBRARIES})
-  target_link_libraries(${name} pthread)
-endforeach()
+if ("${CMAKE_BUILD_TYPE}" MATCHES "Debug")
+  aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/test TEST_SRCS)
+  foreach(i ${TEST_SRCS})
+    get_filename_component(name ${i} NAME_WE)
+    set(name "${name}_unittest")
+    add_executable(${name} ${i})
+    target_link_libraries(${name} ${GTEST_BOTH_LIBRARIES})
+    target_link_libraries(${name} pthread)
+  endforeach()
+endif()
 
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/benchmark BENCH_SRCS)
-foreach(i ${BENCH_SRCS})
-  get_filename_component(name ${i} NAME_WE)
-  set(name "${name}_bench")
-  add_executable(${name} ${i})
-endforeach()
+if ("${CMAKE_BUILD_TYPE}" MATCHES "Release")
+  aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/benchmark BENCH_SRCS)
+  foreach(i ${BENCH_SRCS})
+    get_filename_component(name ${i} NAME_WE)
+    set(name "${name}_bench")
+    add_executable(${name} ${i})
+  endforeach()
+endif()
